[artf575174]- Bugs fixed related to performance test tab and alignment issues with project home page.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
@@ -1073,7 +1073,7 @@ Width >= 1152 and < 1280
 		width: 98%;
 	}
 	#subcontainer {
-		width: 77%;
+		width: 79%;
 		float: right;
 		margin-top: 10px;
 	}
@@ -1410,7 +1410,16 @@ Width >= 1152 and < 1280
 Width <= 1280 and height <= 800
 *************************************************************************************/
 @media screen and (min-width : 1280px) and (max-height : 800px) {
-	
+	.app_add_form .theme_accordion_container {
+		float: left;
+		margin: 0.1% 0%;
+		width: 98%;
+	}
+	#subcontainer {
+		width: 79%;
+		float: right;
+		margin-top: 10px;
+	}
 	.formClass {
 		height: 95%;
 		margin: 0;
@@ -1862,7 +1871,7 @@ Width >= 1280 and height >= 800
 		width: 98%;
 	}
 	#subcontainer {
-		width: 77%;
+		width: 79%;
 		float: right;
 		margin-top: 10px;
 	}
@@ -2248,7 +2257,7 @@ Width > 1280 and <= 1360
 		width: 98%;
 	}
 	#subcontainer {
-		width: 81%;
+		width: 79%;
 		float: right;
 		margin-top: 10px;
 	}
